<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_sendbird_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/sendbird"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sendbird_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="20dp"
        app:boxBackgroundColor="@android:color/holo_purple"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/primary_300"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_ti_userid_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_user_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_ti_nickname_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/btn_enter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_nickname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:background="@drawable/login_button_round"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:paddingHorizontal="50dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login_custom"
        android:text="@string/btn_enter_custom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:background="@drawable/login_button_round"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:paddingHorizontal="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>